--- a/src/main/webapp/resources/css/product/detail.css
+++ b/src/main/webapp/resources/css/product/detail.css
@@ -3,13 +3,29 @@ body {
     font-family: Arial, sans-serif;
 }
 
+.slide{
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
 
 .navbar {
     border-radius: 0.5rem;
 }
 
-.carousel-inner img {
+.carousel-inner {
+    margin: 0 auto; /* Bỏ hoặc giảm margin top */
     border-radius: 0.5rem; /* Soft rounded corners for images */
+    width: 475px;
+    height: 595px;
+    box-shadow: 5px 5px 10px 1px rgba(0,0,0,0.5);
+    -webkit-box-shadow: 5px 5px 10px 1px rgba(0,0,0,0.5);
+    -moz-box-shadow: 5px 5px 10px 1px rgba(0,0,0,0.5);
+}
+.carousel-inner img {
+    display: inline-block;
+    width: 100%;
+    height: 100%;
+
 }
 
 h2 {
@@ -42,6 +58,36 @@ h2 {
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.1); /* Add subtle shadow for depth */
     border-radius: 0.5rem; /* Rounded corners for the container */
     overflow: hidden; /* Ensure no overflow of content */
-    width: 900px;
-    height: 750px;
+    background-color: #FFFFFF;
 }
+.infor{
+    background-color: #FFFFFF;
+    height: 600px;
+    width: 620px;
+    border-radius: 0.5rem;
+    margin: 30px auto;
+    padding: 20px;
+
+}
+.carousel-control-prev-icon,
+.carousel-control-next-icon {
+    color: red; /* Thay đổi màu nền cho biểu tượng */
+    border-radius: 50%; /* Tạo hình tròn cho nút */
+
+}
+.bi-caret-right,
+.bi-caret-left{
+    width: 25px;
+    height: 25px;
+    color: red;
+}
+
+.carousel-control-prev,
+.carousel-control-next {
+    color: #E2E2E2; /* Thay đổi màu chữ của nút nếu có */
+}
+
+/*.carousel-control-prev:hover,*/
+/*.carousel-control-next:hover {*/
+/*    background-color: rgba(255, 0, 0, 0.5); !* Màu nền khi hover *!*/
+/*}*/
