--- a/src/main/webapp/resources/css/client/header.css
+++ b/src/main/webapp/resources/css/client/header.css
@@ -1,48 +1,161 @@
 body {
-    padding-top: 100px; /* Khoảng cách để tránh nội dung bị đè bởi header */
+  padding-top: 100px; /* Khoảng cách để tránh nội dung bị đè bởi header */
 }
 
 .slide {
-    margin-top: 100px;
+  margin-top: 100px;
 }
 
 header {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    z-index: 9999;
-    background-color: transparent;
-    transition: background-color 0.3s ease;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 9999;
+  background-color: transparent;
+  transition: background-color 0.3s ease;
 }
 
 /* Thêm hiệu ứng đổi màu khi cuộn */
 .scrolled {
-    background-color: rgba(253, 233, 206, 0.9); /* Màu nền khi cuộn */
+  background-color: rgba(253, 233, 206, 0.9); /* Màu nền khi cuộn */
 }
 
 header {
-    position: fixed;
-    width: 100%;
-    z-index: 1000;
-    background-color: rgba(253, 233, 206, 0.8);
+  position: fixed;
+  width: 100%;
+  z-index: 1000;
+  background-color: rgba(253, 233, 206, 0.8);
 }
 
 .navbar-nav a {
-    font-size: 20px;
-    color: #ff6900 !important;
-    outline: none;
+  font-size: 20px;
+  color: #ff6900 !important;
+  outline: none;
 }
 
 .btn-custom {
-    background-color: transparent; /* Bỏ màu nền */
-    border: none; /* Bỏ viền */
-    color: #ED4417 !important;
-    font-size: 20px !important;
+  background-color: transparent; /* Bỏ màu nền */
+  border: none; /* Bỏ viền */
+  color: #ed4417 !important;
+  font-size: 20px !important;
 }
 
 .btn-custom:hover {
-    /*background-color: rgba(255, 105, 0, 0.3); !* Tạo hiệu ứng hover *!*/
-    background-color: transparent; /* Bỏ màu nền */
-    color: #a16868; /* Màu chữ khi hover */
+  /*background-color: rgba(255, 105, 0, 0.3); !* Tạo hiệu ứng hover *!*/
+  background-color: transparent; /* Bỏ màu nền */
+  color: #a16868; /* Màu chữ khi hover */
+}
+
+.button-search {
+  position: relative;
+  border: none;
+  background-color: white;
+  color: #212121;
+  /* padding: 20px; */
+  height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 20px;
+  font-weight: 600;
+  /* gap: 10px; */
+  border-radius: 10px;
+  transition: all 0.6s cubic-bezier(0.23, 1, 0.32, 1);
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+  cursor: pointer;
+  overflow: hidden;
+}
+
+.button-search span {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 1;
+}
+
+.button-search::before {
+  content: "";
+  position: absolute;
+  background-color: palevioletred;
+  width: 100%;
+  height: 100%;
+  left: 0%;
+  bottom: 0%;
+  transform: translate(-100%, 100%);
+  border-radius: inherit;
+}
+
+.button-search svg {
+  fill: palevioletred;
+  transition: all 0.6s cubic-bezier(0.23, 1, 0.32, 1);
+}
+
+.button-search:hover::before {
+  animation: shakeBack 0.6s forwards;
+}
+
+.button-search:hover svg {
+  fill: white;
+  scale: 1.3;
+}
+
+.button-search:active {
+  box-shadow: none;
+}
+
+@keyframes shakeBack {
+  0% {
+    transform: translate(-100%, 100%);
+  }
+
+  50% {
+    transform: translate(20%, -20%);
+  }
+
+  100% {
+    transform: translate(0%, 0%);
+  }
+}
+
+/* From Uiverse.io by Maximinodotpy */
+.inputGroup {
+  font-family: "Segoe UI", sans-serif;
+  margin: 1em 0 1em 0;
+  max-width: 190px;
+  position: relative;
+}
+
+.inputGroup input {
+  font-size: 100%;
+  padding: 0.8em;
+  outline: none;
+  border: 2px solid rgb(200, 200, 200);
+  background-color: transparent;
+  border-radius: 20px;
+  width: 100%;
+}
+
+.inputGroup label {
+  font-size: 100%;
+  position: absolute;
+  left: 0;
+  padding: 0.8em;
+  margin-left: 0.5em;
+  pointer-events: none;
+  transition: all 0.3s ease;
+  color: rgb(100, 100, 100);
+}
+
+.inputGroup :is(input:focus, input:valid) ~ label {
+  transform: translateY(-50%) scale(0.9);
+  margin: 0em;
+  margin-left: 1.3em;
+  padding: 0.4em;
+  background-color: #e8e8e8;
+}
+
+.inputGroup :is(input:focus, input:valid) {
+  border-color: rgb(150, 150, 200);
 }
