--- a/src/main/webapp/resources/css/client/header.css
+++ b/src/main/webapp/resources/css/client/header.css
@@ -41,6 +41,18 @@ header {
   font-size: 20px !important;
 }
 
+.btn-white {
+  color: #ffffff !important; /* Màu trắng */
+  background-color: #ed4417; /* Đổi màu nền nếu cần */
+  border: 1px solid #ffffff; /* Nếu muốn viền */
+}
+
+.btn-white:hover {
+  color: #ed4417; /* Màu khi hover */
+  background-color: #ffffff; /* Nền khi hover */
+  border: 1px solid #ed4417;
+}
+
 .btn-custom:hover {
   /*background-color: rgba(255, 105, 0, 0.3); !* Tạo hiệu ứng hover *!*/
   background-color: transparent; /* Bỏ màu nền */
